[package]
name = "repos-toolbox-api"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.17.0"
axum = "0.6.17"
shuttle-axum = "0.17.0"
tokio = "1.28.0"
octocrab = "0.25.0"
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
tracing = "0.1.37"
serde = "1.0.160"
serde_json = "1.0.96"
axum-macros = "0.3.7"
reqwest = "0.11.17"
